<resources>
    <string name="app_name">StrikeTec(Tablet)</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="deletedata">DELETE DATA</string>
    <string name="total_timetrained">TOTAL TIME TRAINED</string>
    <string name="total_daystrained">TOTAL DAYS TRAINED</string>
    <string name="last_trained">LAST DATE TRAINED</string>
    <string name="weight">WEIGHT</string>
    <string name="height">HEIGHT</string>
    <string name="gloves">GLOVES</string>
    <string name="reach">REACH</string>
    <string name="connectsensor">CONNECT SENSORS</string>
    <string name="weight_spinner_prompt">Weight</string>
    <string name="glove_type_spinner_prompt">Glove Type</string>
    <string name="gender_spinner_prompt">Gender</string>
    <string name="height_spinner_prompt">Height</string>
    <string name="reach_spinner_prompt">Reach</string>
    <string name="quick_start">Quick start</string>
    <string name="round_traning">Round traning</string>
    <string name="training_stats_title">TRAINING STATS</string>
    <string name="training_title">TRAINING</string>
    <string name="training_quality">TRAINING QUALITY</string>
    <string name="training_bestpunch">BEST PUNCH</string>
    <string name="stats_damage">DAMAGE</string>
    <string name="today_time">TIME</string>
    <string name="fatigue">FATIGUE</string>
    <string name="activity_time">ACTIVITY TIME</string>
    <string name="active_time">TOTAL ACTIVE TIME</string>
    <string name="inactive_time">TOTAL INACTIVE TIME</string>
    <string name="punch_rank">PUNCH RANK</string>
    <string name="common_stats">COMMON STATS</string>
    <string name="left_sensor_hint">LEFT SENSOR ID</string>
    <string name="right_sensor_hint">RIGHT SENSOR ID</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="title_activity_quick_start_set">QUICK START SETTINGS</string>
    <string name="title_activity_round_training_set">ROUND SETTINGS</string>
    <string name="min_sec">MIN:SEC</string>
    <string name="rounds">ROUNDS</string>
    <string name="round">ROUND</string>
    <string name="rest">REST</string>
    <string name="prepare">PREPARE</string>
    <string name="warning">WARNING</string>
    <string name="total_time">TOTAL TIME:</string>
    <string name="start_training">START TRAINING</string>
    <string name="round_training">ROUND TRAINING</string>
    <string name="title_quick_start">QUICK START</string>
    <string name="stop_training">STOP TRAINING</string>
    <string name="today_total">TOTAL</string>
    <string name="today_selected">SELECTED</string>
    <string name="today_trainingtype">TRAINING TYPE</string>
    <string name="today_punches">PUNCHES</string>
    <string name="today_speed">SPEED (AVG)</string>
    <string name="today_power">POWER (AVG)</string>
    <string name="battery_default_value">0%</string>
    <string name="right_straight">RIGHT STRAIGHT</string>
    <string name="left_straight">LEFT STRAIGHT</string>
    <string name="avg">AVG</string>
    <string name="max">MAX</string>
    <string name="mph">MPH</string>
    <string name="lbs">LBS</string>
    <string name="lefthand">LEFT HAND</string>
    <string name="righthand">RIGHT HAND</string>
    <string name="leftkick">LEFT KICK</string>
    <string name="rightkick">RIGHT KICK</string>
    <string name="speed_label">SPEED (MPH)</string>
    <string name="punchcount_label">PUNCH COUNT</string>
    <string name="power_label">POWER (LBS)</string>
    <string name="midrange">Mid-range</string>
    <string name="shortrange">Short-range</string>
    <string name="longrange">Long-range</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="combination_insets">COMBINATIONS IN SETS</string>
    <string name="new_combination_title">NEW COMBINATION</string>
    <string name="edit_combination_title">EDIT COMBINATION</string>
    <string name="combination_name">COMBINATION NAME</string>
    <string name="listofpunches">LIST OF PUNCHES</string>
    <string name="addpunch">ADD PUNCH</string>
    <string name="save">SAVE</string>
    <string name="dialog_combotitle">CHOOSE PUNCH TO ADD:</string>
    <string name="dialog_settitle">CHOOSE COMBO TO ADD:</string>
    <string name="dialog_workouttitle">CHOOSE SET TO ADD:</string>
    <string name="replace_punch">Replace punch</string>
    <string name="replace_combo">Replace Combination</string>
    <string name="replace_set">Replace Set</string>
    <string name="insert_above">Insert above</string>
    <string name="insert_below">Insert below</string>
    <string name="new_set_title">SET ROUTINE CREATE</string>
    <string name="edit_set_title">SET ROUTINE EDIT</string>
    <string name="set_name">SET ROUTINE NAME</string>
    <string name="listofcombinations">LIST OF COMBINATIONS</string>
    <string name="addcombo">ADD COMBINATION</string>
    <string name="new_workout_title">NEW WORKOUT</string>
    <string name="edit_workout_title">EDIT WORKOUT</string>
    <string name="workout_name">WORKOUT NAME</string>
    <string name="workoutplan">WORKOUT PLAN</string>
    <string name="addset">ADD SET</string>
    <string name="roundinworkout">ROUNDS IN WORKOUT</string>
    <string name="combinationsinround">COMBINATIONS IN ROUND</string>
    <string name="title_combination">COMBINATION TRAINING</string>
    <string name="title_sets">SET ROUTINE TRAINING</string>
    <string name="title_workout">WORKOUT TRAINING</string>
    <string name="email">EMAIL</string>
    <string name="pwd">PASSWORD</string>
    <string name="repwd">RETYPE PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="lostpwd">LOST PASSWORD</string>
    <string name="notmember">NOT A MEMBER?</string>
    <string name="register">REGISTER</string>
    <string name="error_email_field_required">Email is required.</string>
    <string name="error_password_field_required">Password is required.</string>
    <string name="resetpwd_guide">TO RESET YOUR PASSWORD YOU NEED TO</string>
    <string name="choose_secretquestion">CHOOSE SECRET QUESTION</string>
    <string name="resetpwd">RESET PASSWORD</string>
    <string name="reset_success">YOU HAVE BEEN SUCCESSFULLY ANSWERED YOUR\nSECRET QUESTION. PlEASE CLICK CONTINUE TO SET  \nNEW PASSWORD.</string>
    <string name="reset_fail">UNFORTUNATELY,\nYOUR ANSWER WAS NOT CORRECT.\nYOU ARE NOT LOGGED IN.\n\nPLEASE TRY AGAIN. YOU HAVE ONLY 3 ATTEMPTS</string>
    <string name="reset_sentemail">YOUR NEW PASSWORD WAS SENT TO YOUR EMAIL.</string>
    <string name="reset_sentemailfailed">NEW PASSWORD CAN\'T SEND TO YOUR EMAIL.</string>
    <string name="reset_continue">CONTINUE</string>
    <string name="select_security_question_text">SELECT SECURITY QUESTION</string>
    <string name="security_question_spinner_prompt">SECURITY QUESTION</string>
    <string name="register_guide">WE NEED SOME INFORMATION ABOUT YOU:</string>
    <string name="fistname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="retype_pwd">RETYPE PASSWORD</string>
    <string name="type_answer">TYPE YOUR SECREATE ANSWER</string>
    <string name="accept_terms">YOU ACCEPT THE TERMS OF USE BY REGISTERING HERE</string>
    <string name="terms1">YOU ACCEPT THE</string>
    <string name="terms2">TERMS OF USE</string>
    <string name="terms3">BY REGISTERING HERE</string>
    <string name="termsofuse">TERMS OF USE</string>
    <string name="agreement">\nLICENSED APPLICATION END USER LICENSE AGREEMENT\n</string>
    <string name="agreement_content0">Elliott Fight Dynamics LLC End-User License Agreement (“EULA”) is a legal agreement between  You and Elliott Fight Dynamics LLC ("EFD" or “We”), for use of the Licensed Application (“App”), including any associated software components, and incorporates EFD’s <a href="http://efdstriketec.com/terms-and-conditions/">Terms of Use </a> into this EULA. The App is protected by copyright laws and international copyright treaties, as well as other intellectual property laws and treaties. The App is licensed, not sold.  EFD reserves all rights not expressly granted to you herein.\n </string>
    <string name="agreement_subtitle1">1. GRANT OF LICENSE\n</string>
    <string name="agreement_content1">This License granted to You by EFD is limited to a non-exclusive and non-transferable license to use the App. You may not distribute or make the App available over a network where it could be used by multiple devices at the same time. You may not rent, lease, lend, sell, redistribute or sublicense the App. You may not copy (except as expressly permitted by this license and the Usage Rules), decompile, reverse engineer, disassemble, attempt to derive the source code of, modify, or create derivative works of the App, any updates, or any part thereof (except as and only to the extent any foregoing restriction is prohibited by applicable law or to the extent as may be permitted by the licensing terms governing use of any open sourced components included with the App). Any attempt to do so is a violation of the rights of the EFD. If You breach this restriction, You may be subject to prosecution and damages. You are solely responsible for any third party’s use of Your License.\n</string>
    <string name="agreement_subtitle2">2. TERMINATION\n</string>
    <string name="agreement_content2">You or We may terminate this Agreement at any time and for any reason by giving written notice to the other party. We may terminate Your License at any time, with or without cause. If We terminate your License without cause, we\'ll refund a prorated portion of your monthly prepayment. EFD won’t refund or reimburse you if there’s cause, like a violation of the EULA. When this License is terminated, you must destroy all copies of the App in your possession.\n</string>
    <string name="agreement_subtitle3">3. COPYRIGHT\n</string>
    <string name="agreement_content3">All content included as part of the App, such as text, graphics, logos, images, as well as the compilation thereof, and any software used in or on the App, is the property of EFD or its suppliers and protected by copyright and other laws that protect intellectual property and proprietary rights. You agree to observe and abide by all copyright and other proprietary notices, legends or other restrictions contained in any such content and will not make any changes thereto. This EULA grants you no rights to use such content. All rights not expressly granted are reserved by EFD.\n</string>
    <string name="agreement_subtitle4">4. COMPLIANCE WITH RULES, APPLICABLE LAWS AND EXPORT\n</string>
    <string name="agreement_content4">You represent and warrant that your use of the App will comply with all applicable laws, regulations and the EULA. The software that supports the App (the "Software") is subject to United States export controls. None of the Software may be downloaded or otherwise exported or re-exported in violation of United States export laws. You’re downloading and using the Software at your own risk.\n</string>
    <string name="agreement_subtitle5">5. DATA COLLECTION AND USE\n</string>
    <string name="agreement_content5">We may use, share or sell non-personally identifying information to a third party for any marketing purposes whatsoever. You may be given the opportunity to link to other sites that may use, collect or store certain information about you and you should read the applicable terms and conditions for such sites to determine how your information may or may not be used, collected or stored.\n</string>
    <string name="agreement_subtitle6">6. THIRD PARTY MATERIALS AND SERVICES\n</string>
</resources>