<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp"
    android:background="@drawable/background"
    tools:context="com.efd.striketectablet.activity.credential.LostPasswordActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarsize"
        >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingRight="20dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/close" />

        <com.efd.striketectablet.customview.CustomTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:text="@string/lostpwd"
            android:textColor="@color/header_text_color_blue"
            android:textSize="@dimen/title_textsize" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/credential_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <com.efd.striketectablet.customview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resetpwd_guide"
                android:textColor="@color/punches_text_color"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <com.efd.striketectablet.customview.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/orange"
                    android:textColorHint="@color/hint_color"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/sensor_edit_id" />

                <com.efd.striketectablet.customview.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="OR"
                    android:textColor="@color/punches_text_color"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/dropdown">

                    <Spinner
                        android:id="@+id/security_question_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:drawSelectorOnTop="true"
                        android:gravity="left|center_vertical"
                        android:nextFocusDown="@+id/registration_accnt_setup_next_button"
                        android:prompt="@string/security_question_spinner_prompt" />

                </LinearLayout>

                <com.efd.striketectablet.customview.CustomEditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:hint="@string/type_answer"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/orange"
                    android:textColorHint="@color/hint_color1"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/sensor_edit_id" />

                <com.efd.striketectablet.customview.HexagonButton
                    android:id="@+id/reset_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/resetpwd"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:angle_coef="25"
                    app:fill="true"
                    app:hexagon_color="@color/orange" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

            <com.efd.striketectablet.customview.CustomTextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reset_success"
                android:textColor="@color/punches_text_color"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content">

                <com.efd.striketectablet.customview.HexagonButton
                    android:id="@+id/continue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/reset_continue"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:angle_coef="25"
                    app:fill="true"
                    app:hexagon_color="@color/orange" />

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
