<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.efd.striketectablet.activity.credential.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="554dp"
            android:layout_height="450dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/login_hexagonbg"/>

        <!--<com.github.siyamed.shapeimageview.mask.PorterShapeImageView-->
            <!--android:layout_width="554dp"-->
            <!--android:layout_height="450dp"-->
            <!--app:siShape="@drawable/profile_overlay"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:src="@drawable/login_hexagonbg"/>-->

        <LinearLayout
            android:id="@+id/parent"
            android:layout_marginTop="90dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <com.efd.striketectablet.customview.CustomEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:background="@color/transparent"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <View
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/sensor_edit_id"
                android:layout_alignParentBottom="true"/>

            <com.efd.striketectablet.customview.CustomEditText
                android:layout_marginTop="50dp"
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/pwd"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:background="@color/transparent"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <View
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@drawable/sensor_edit_id"
                android:layout_alignParentBottom="true"/>

            <com.efd.striketectablet.customview.HexagonButton
                android:layout_marginTop="40dp"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:angle_coef="25"
                app:fill="true"
                app:hexagon_color="@color/orange" />

            <View
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_1"/>

            <com.efd.striketectablet.customview.CustomTextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/notmember"
                android:textColor="@color/punches_text_color"
                android:textSize="20sp"
                android:gravity="center"/>

            <com.efd.striketectablet.customview.HexagonButton
                android:layout_marginTop="25dp"
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:angle_coef="25"
                app:fill="false"
                app:hexagon_color="@color/orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="195dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:src="@drawable/training_left_image"/>

            <com.efd.striketectablet.customview.HexagonButton
                android:layout_marginLeft="5dp"
                android:id="@+id/btn_lostpwd"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/lostpwd"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:angle_coef="25"
                app:fill="false"
                app:hexagon_color="@color/orange" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
