<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="700dp"
    android:layout_height="match_parent"
    tools:context="com.efd.striketectablet.activity.SplashActivity"
    android:background="@drawable/popup_bg"
    android:orientation="vertical">

    <com.efd.striketectablet.customview.CustomTextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectsensor"
        android:textColor="@color/punches_text_color"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>
    
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@drawable/edit_bg"
                    android:layout_alignParentBottom="true"/>

                <com.efd.striketectablet.customview.CustomEditText
                    android:id="@+id/left_sensor_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/left_sensor_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:background="@color/transparent"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/left_search"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/search_sensor"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@drawable/edit_bg"
                    android:layout_alignParentBottom="true"/>

                <com.efd.striketectablet.customview.CustomEditText
                    android:id="@+id/right_sensor_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/right_sensor_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:background="@color/transparent"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/right_search"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="50dp"
                android:src="@drawable/search_sensor"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/separator"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp">

        <com.efd.striketectablet.customview.CustomButton
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bg"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <com.efd.striketectablet.customview.CustomButton
            android:id="@+id/ok_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@drawable/positive_btn_bg"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>
